--- a/LED/Windows/MainWindow.xaml
+++ b/LED/Windows/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="LED.MainWindow"
+﻿<Window x:Class="LED.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LED"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="585.805">
-    <Frame x:Name="fm_MainFrame" Content="" HorizontalAlignment="Left" Height="317" VerticalAlignment="Top" Width="515"/>
+        Title="Windows.MainWindow" Height="350" Width="585.805">
+    <Button x:Name="bt_CreateNewTest" Content="Creation d'un nouveau test" HorizontalAlignment="Left" Margin="138,116,0,0" VerticalAlignment="Top" Width="179" Height="36" Click="bt_CreateNewTest_Click"/>
 </Window>
