--- a/LED/UserControls/UC_ExamWrongAnswer.xaml
+++ b/LED/UserControls/UC_ExamWrongAnswer.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="LED.UserControls.UC_ExamWaiting"
+﻿<UserControl x:Class="LED.UserControls.UC_ExamWrongAnswer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:LED.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Background="{DynamicResource {x:Static SystemColors.ControlLightLightBrushKey}}">
-        <Label Content="Cliquez sur commencer &#13; pour afficher le test" Margin="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20" FontWeight="Bold"/>
+             d:DesignHeight="300" d:DesignWidth="300" Background="{DynamicResource {x:Static SystemColors.ControlLightLightBrushKey}}">
+    <Grid>
+        <Label Content="Vous avez fait une erreur..." Margin="0" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="20" FontWeight="Bold" />
     </Grid>
 </UserControl>
